@startuml
class com.avasaysayava.bagrutproject.game.property.StairDownProperty {
+ <<Create>> StairDownProperty(Game,GameMap,Tile,int,int)
+ void update(Entity)
+ Tile getTile()
}

abstract class com.avasaysayava.bagrutproject.game.property.Property {
# Game game
# GameMap map
# int x
# Tile parent
+ <<Create>> Property(Game,GameMap,Tile,int,int)
+ {abstract}void update(Entity)
+ {abstract}Tile getTile()
}


class com.avasaysayava.bagrutproject.game.property.StairUpProperty {
+ <<Create>> StairUpProperty(Game,GameMap,Tile,int,int)
+ void update(Entity)
+ Tile getTile()
}

class com.avasaysayava.bagrutproject.game.property.GlyphStoneProperty {
+ {static} int GLYPH_GOAL
- int glyphs
- Tile tile
+ <<Create>> GlyphStoneProperty(Game,GameMap,Tile,int,int)
+ void update(Entity)
+ Tile getTile()
}


class com.avasaysayava.bagrutproject.game.property.GlyphProperty {
- Tile tile
+ <<Create>> GlyphProperty(Game,GameMap,Tile,int,int)
+ void update(Entity)
+ Tile getTile()
}




com.avasaysayava.bagrutproject.game.property.Property <|- com.avasaysayava.bagrutproject.game.property.StairDownProperty
com.avasaysayava.bagrutproject.game.property.Property <|--- com.avasaysayava.bagrutproject.game.property.StairUpProperty
com.avasaysayava.bagrutproject.game.property.Property <|-- com.avasaysayava.bagrutproject.game.property.GlyphStoneProperty
com.avasaysayava.bagrutproject.game.property.Property <|-- com.avasaysayava.bagrutproject.game.property.GlyphProperty
@enduml